samples/_failures_safe/1761330073_c01255_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cd0e8b8.c: In function ‘main’:
./samples/SAFE/__tmp_9cd0e8b8.c:118:5: error: expected declaration or statement at end of input
  118 |     Buffer decompressed = {0};
      |     ^~~~~~
